--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,6 @@
      <maven.compiler.target>3.6.1</maven.compiler.target>
   </properties>
 
-
-
-
   <dependencies>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -65,5 +62,20 @@
       </plugin>
     </plugins>
   </build>
+ <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <configuration>
+          <webappDirectory>/sample/servlet/container/deploy/directory</webappDirectory>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+
+  
   
 </project>
