--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
         <configuration>
-          <source>2</source>
-          <target>2</target>
+          <source></source>
+          <target></target>
         </configuration>
       </plugin>
     </plugins>
