--- a/pom.xml
+++ b/pom.xml
@@ -47,21 +47,17 @@
       </exclusions>
     </dependency>
   </dependencies>
-  
   <build>
-    <finalName>com.jaystech</finalName>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
-        <configuration>
-          <source>3.6.1</source>
-          <target>3.6.1</target>
-        </configuration>
-      </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version> <!-- Use the latest version -->
+        </plugin>
+        <!-- Other plugins -->
     </plugins>
-  </build>
+</build>
+
 
 
  
