--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>3.3.2</version> <!-- Use the latest version -->
         </plugin>
         <!-- Other plugins -->
+	    <pluginRepositories>
+	    <pluginRepository>    
+		<id>maven1</id>
+		<name>Maven.org</name>
+		<url>http://repo1.maven.org/maven2</url>
+	    </pluginRepository>
+	</pluginRepositories>
     </plugins>
 </build>
 
